force-app/main/default/objects/sugati__XE_Token__c/sugati__XE_Token__c.object-meta.xml
<CustomObject>
    <label>XE Token</label>
    <nameField>
        <displayFormat>XET-{0000}</displayFormat>
        <label>XE Token Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XE Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>