force-app/main/default/objects/sugati__XE_Token__c/fields/sugati__XET_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__XET_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this XE token record is currently active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>