force-app/main/default/objects/sugati__XE_Token__c/fields/sugati__XET_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>sugati__XET_Refresh_Token__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>XE Money API Refresh Token - Confidential authentication credential</description>
    <label>Refresh Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>