force-app/main/default/objects/sugati__XE_Token__c/fields/sugati__XET_Token__c.field-meta.xml
<CustomField>
    <fullName>sugati__XET_Token__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>XE Money API Access Token - Confidential authentication credential</description>
    <label>Access Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>